--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,17 +4,17 @@
   <div class="panel-footer">
 	  <div class="row">
 		<div class="col-sm-4">
-		    <h5>About</h5>	
+			<!--   <h5>About</h5>	-->
             <p>{{ site.about }}</p>
 		</div>
 
 		<div class="col-sm-4">
-		    <h5>Information</h5>	
+			<!--   <h5>Information</h5>	-->
             <p>{{ site.information }}</p>
 		</div>
 
 		<div class="col-sm-4">
-		    <h5>Coordinates</h5>	
+			<!--   <h5>Coordinates</h5>	-->
             <p>{{ site.coordinates }}</p>
 		</div>
 	  </div>
