--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
 {% endfor %}
 </div>
 
-<div class="jumbotron">
+<!--div class="jumbotron">
   <h4>News</h4>
 
   {% for article in site.data.news limit:3 %}
