--- a/_sass/bootstrap/bootstrap.scss
+++ b/_sass/bootstrap/bootstrap.scss
@@ -4,7 +4,6 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -42,3 +41,4 @@
 @import "spinners";
 @import "utilities";
 @import "print";
+@import "sidebar";
